src/OpenCvSharp.Native/include/open_cv_sharp/features2d/features2d.h

typedef struct jyppx_ocv_features2d_sift jyppx_ocv_features2d_sift;
typedef struct jyppx_ocv_features2d_fast jyppx_ocv_features2d_fast;
typedef struct jyppx_ocv_features2d_gftt jyppx_ocv_features2d_gftt;
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_draw_keypoints(
    const jyppx_ocv_mat* image,
    const jyppx_ocv_key_point* keypoints,
    int keypoint_count,
    jyppx_ocv_mat* out_image,
    double color_v0,
    double color_v1,
    double color_v2,
    double color_v3,
    int flags);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_draw_matches(
    const jyppx_ocv_mat* img1,
    const jyppx_ocv_key_point* keypoints1,
    int keypoint1_count,
    const jyppx_ocv_mat* img2,
    const jyppx_ocv_key_point* keypoints2,
    int keypoint2_count,
    const jyppx_ocv_dmatch* matches,
    int match_count,
    jyppx_ocv_mat* out_image,
    double match_color_v0,
    double match_color_v1,
    double match_color_v2,
    double match_color_v3,
    double single_point_color_v0,
    double single_point_color_v1,
    double single_point_color_v2,
    double single_point_color_v3,
    int flags);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_draw_matches_knn(
    const jyppx_ocv_mat* img1,
    const jyppx_ocv_key_point* keypoints1,
    int keypoint1_count,
    const jyppx_ocv_mat* img2,
    const jyppx_ocv_key_point* keypoints2,
    int keypoint2_count,
    const int* offsets,
    int offset_count,
    const jyppx_ocv_dmatch* matches,
    int match_count,
    jyppx_ocv_mat* out_image,
    double match_color_v0,
    double match_color_v1,
    double match_color_v2,
    double match_color_v3,
    double single_point_color_v0,
    double single_point_color_v1,
    double single_point_color_v2,
    double single_point_color_v3,
    int flags);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_create(
    int nfeatures,
    int n_octave_layers,
    double contrast_threshold,
    double edge_threshold,
    double sigma,
    int descriptor_type,
    int enable_precise_upscale,
    jyppx_ocv_features2d_sift** sift);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_features2d_sift_release(
    jyppx_ocv_features2d_sift* sift);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_clear(jyppx_ocv_features2d_sift* sift);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_empty(const jyppx_ocv_features2d_sift* sift, int* empty);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_descriptor_size(const jyppx_ocv_features2d_sift* sift, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_descriptor_type(const jyppx_ocv_features2d_sift* sift, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_default_norm(const jyppx_ocv_features2d_sift* sift, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_get_nfeatures(const jyppx_ocv_features2d_sift* sift, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_set_nfeatures(jyppx_ocv_features2d_sift* sift, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_get_n_octave_layers(const jyppx_ocv_features2d_sift* sift, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_set_n_octave_layers(jyppx_ocv_features2d_sift* sift, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_get_contrast_threshold(const jyppx_ocv_features2d_sift* sift, double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_set_contrast_threshold(jyppx_ocv_features2d_sift* sift, double value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_get_edge_threshold(const jyppx_ocv_features2d_sift* sift, double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_set_edge_threshold(jyppx_ocv_features2d_sift* sift, double value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_get_sigma(const jyppx_ocv_features2d_sift* sift, double* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_set_sigma(jyppx_ocv_features2d_sift* sift, double value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_detect_count(const jyppx_ocv_features2d_sift* sift, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_detect_fill(const jyppx_ocv_features2d_sift* sift, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, jyppx_ocv_key_point* keypoints, int keypoint_capacity, int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_compute(const jyppx_ocv_features2d_sift* sift, const jyppx_ocv_mat* image, const jyppx_ocv_key_point* keypoints_in, int keypoint_count, jyppx_ocv_key_point* keypoints_out, int keypoint_capacity, int* written_keypoint_count, jyppx_ocv_mat* descriptors);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_detect_and_compute_count(const jyppx_ocv_features2d_sift* sift, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, const jyppx_ocv_key_point* keypoints_in, int keypoint_count, int use_provided_keypoints, int* output_keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_sift_detect_and_compute_fill(const jyppx_ocv_features2d_sift* sift, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, const jyppx_ocv_key_point* keypoints_in, int keypoint_count, int use_provided_keypoints, jyppx_ocv_key_point* keypoints_out, int keypoint_capacity, int* output_keypoint_count, jyppx_ocv_mat* descriptors);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_fast_create(int threshold, int nonmax_suppression, int type, jyppx_ocv_features2d_fast** fast);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_features2d_fast_release(jyppx_ocv_features2d_fast* fast);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_fast_clear(jyppx_ocv_features2d_fast* fast);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_fast_empty(const jyppx_ocv_features2d_fast* fast, int* empty);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_fast_descriptor_size(const jyppx_ocv_features2d_fast* fast, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_fast_descriptor_type(const jyppx_ocv_features2d_fast* fast, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_fast_default_norm(const jyppx_ocv_features2d_fast* fast, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_fast_get_threshold(const jyppx_ocv_features2d_fast* fast, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_fast_set_threshold(jyppx_ocv_features2d_fast* fast, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_fast_get_nonmax_suppression(const jyppx_ocv_features2d_fast* fast, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_fast_set_nonmax_suppression(jyppx_ocv_features2d_fast* fast, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_fast_get_type(const jyppx_ocv_features2d_fast* fast, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_fast_set_type(jyppx_ocv_features2d_fast* fast, int value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_fast_detect_count(const jyppx_ocv_features2d_fast* fast, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_fast_detect_fill(const jyppx_ocv_features2d_fast* fast, const jyppx_ocv_mat* image, const jyppx_ocv_mat* mask, jyppx_ocv_key_point* keypoints, int keypoint_capacity, int* keypoint_count);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_create(int max_corners, double quality_level, double min_distance, int block_size, int gradient_size, int use_harris_detector, double k, jyppx_ocv_features2d_gftt** gftt);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API void jyppx_ocv_features2d_gftt_release(jyppx_ocv_features2d_gftt* gftt);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_clear(jyppx_ocv_features2d_gftt* gftt);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_empty(const jyppx_ocv_features2d_gftt* gftt, int* empty);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_descriptor_size(const jyppx_ocv_features2d_gftt* gftt, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_descriptor_type(const jyppx_ocv_features2d_gftt* gftt, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_default_norm(const jyppx_ocv_features2d_gftt* gftt, int* value);
OPENCV_CSHARP_EXTERN_C OPENCV_CSHARP_API int jyppx_ocv_features2d_gftt_get_max_features(const jyppx_ocv_features2d_gftt* gftt, int* value);