src/OpenCvSharp/Internal/Interop/NativeMethods.Features2D.LibraryImport.cs


        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_draw_keypoints")]
        internal static partial int Features2DDrawKeypoints(IntPtr image, NativeKeyPoint* keypoints, int keypointCount, IntPtr outImage, double colorV0, double colorV1, double colorV2, double colorV3, int flags);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_draw_matches")]
        internal static partial int Features2DDrawMatches(IntPtr img1, NativeKeyPoint* keypoints1, int keypoint1Count, IntPtr img2, NativeKeyPoint* keypoints2, int keypoint2Count, NativeDMatch* matches, int matchCount, IntPtr outImage, double matchColorV0, double matchColorV1, double matchColorV2, double matchColorV3, double singlePointColorV0, double singlePointColorV1, double singlePointColorV2, double singlePointColorV3, int flags);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_draw_matches_knn")]
        internal static partial int Features2DDrawMatchesKnn(IntPtr img1, NativeKeyPoint* keypoints1, int keypoint1Count, IntPtr img2, NativeKeyPoint* keypoints2, int keypoint2Count, int* offsets, int offsetCount, NativeDMatch* matches, int matchCount, IntPtr outImage, double matchColorV0, double matchColorV1, double matchColorV2, double matchColorV3, double singlePointColorV0, double singlePointColorV1, double singlePointColorV2, double singlePointColorV3, int flags);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_create")]
        internal static partial int Features2DSiftCreate(int nFeatures, int nOctaveLayers, double contrastThreshold, double edgeThreshold, double sigma, int descriptorType, int enablePreciseUpscale, out IntPtr sift);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_release")]
        internal static partial void Features2DSiftRelease(IntPtr sift);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_clear")]
        internal static partial int Features2DSiftClear(IntPtr sift);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_empty")]
        internal static partial int Features2DSiftEmpty(IntPtr sift, out int empty);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_descriptor_size")]
        internal static partial int Features2DSiftDescriptorSize(IntPtr sift, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_descriptor_type")]
        internal static partial int Features2DSiftDescriptorType(IntPtr sift, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_default_norm")]
        internal static partial int Features2DSiftDefaultNorm(IntPtr sift, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_get_nfeatures")]
        internal static partial int Features2DSiftGetNFeatures(IntPtr sift, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_set_nfeatures")]
        internal static partial int Features2DSiftSetNFeatures(IntPtr sift, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_get_n_octave_layers")]
        internal static partial int Features2DSiftGetNOctaveLayers(IntPtr sift, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_set_n_octave_layers")]
        internal static partial int Features2DSiftSetNOctaveLayers(IntPtr sift, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_get_contrast_threshold")]
        internal static partial int Features2DSiftGetContrastThreshold(IntPtr sift, out double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_set_contrast_threshold")]
        internal static partial int Features2DSiftSetContrastThreshold(IntPtr sift, double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_get_edge_threshold")]
        internal static partial int Features2DSiftGetEdgeThreshold(IntPtr sift, out double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_set_edge_threshold")]
        internal static partial int Features2DSiftSetEdgeThreshold(IntPtr sift, double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_get_sigma")]
        internal static partial int Features2DSiftGetSigma(IntPtr sift, out double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_set_sigma")]
        internal static partial int Features2DSiftSetSigma(IntPtr sift, double value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_detect_count")]
        internal static partial int Features2DSiftDetectCount(IntPtr sift, IntPtr image, IntPtr mask, out int keypointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_detect_fill")]
        internal static partial int Features2DSiftDetectFill(IntPtr sift, IntPtr image, IntPtr mask, NativeKeyPoint* keypoints, int keypointCapacity, out int keypointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_compute")]
        internal static partial int Features2DSiftCompute(IntPtr sift, IntPtr image, NativeKeyPoint* keypointsIn, int keypointCount, NativeKeyPoint* keypointsOut, int keypointCapacity, out int writtenKeypointCount, IntPtr descriptors);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_detect_and_compute_count")]
        internal static partial int Features2DSiftDetectAndComputeCount(IntPtr sift, IntPtr image, IntPtr mask, NativeKeyPoint* keypointsIn, int keypointCount, int useProvidedKeypoints, out int outputKeypointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_sift_detect_and_compute_fill")]
        internal static partial int Features2DSiftDetectAndComputeFill(IntPtr sift, IntPtr image, IntPtr mask, NativeKeyPoint* keypointsIn, int keypointCount, int useProvidedKeypoints, NativeKeyPoint* keypointsOut, int keypointCapacity, out int outputKeypointCount, IntPtr descriptors);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_create")]
        internal static partial int Features2DFastCreate(int threshold, int nonmaxSuppression, int type, out IntPtr fast);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_release")]
        internal static partial void Features2DFastRelease(IntPtr fast);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_clear")]
        internal static partial int Features2DFastClear(IntPtr fast);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_empty")]
        internal static partial int Features2DFastEmpty(IntPtr fast, out int empty);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_descriptor_size")]
        internal static partial int Features2DFastDescriptorSize(IntPtr fast, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_descriptor_type")]
        internal static partial int Features2DFastDescriptorType(IntPtr fast, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_default_norm")]
        internal static partial int Features2DFastDefaultNorm(IntPtr fast, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_get_threshold")]
        internal static partial int Features2DFastGetThreshold(IntPtr fast, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_set_threshold")]
        internal static partial int Features2DFastSetThreshold(IntPtr fast, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_get_nonmax_suppression")]
        internal static partial int Features2DFastGetNonmaxSuppression(IntPtr fast, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_set_nonmax_suppression")]
        internal static partial int Features2DFastSetNonmaxSuppression(IntPtr fast, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_get_type")]
        internal static partial int Features2DFastGetType(IntPtr fast, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_set_type")]
        internal static partial int Features2DFastSetType(IntPtr fast, int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_detect_count")]
        internal static partial int Features2DFastDetectCount(IntPtr fast, IntPtr image, IntPtr mask, out int keypointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_fast_detect_fill")]
        internal static partial int Features2DFastDetectFill(IntPtr fast, IntPtr image, IntPtr mask, NativeKeyPoint* keypoints, int keypointCapacity, out int keypointCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_create")]
        internal static partial int Features2DGfttCreate(int maxCorners, double qualityLevel, double minDistance, int blockSize, int gradientSize, int useHarrisDetector, double k, out IntPtr gftt);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_release")]
        internal static partial void Features2DGfttRelease(IntPtr gftt);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_clear")]
        internal static partial int Features2DGfttClear(IntPtr gftt);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_empty")]
        internal static partial int Features2DGfttEmpty(IntPtr gftt, out int empty);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_descriptor_size")]
        internal static partial int Features2DGfttDescriptorSize(IntPtr gftt, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_descriptor_type")]
        internal static partial int Features2DGfttDescriptorType(IntPtr gftt, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_default_norm")]
        internal static partial int Features2DGfttDefaultNorm(IntPtr gftt, out int value);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_features2d_gftt_get_max_features")]
        internal static partial int Features2DGfttGetMaxFeatures(IntPtr gftt, out int value);
